--- a/src/app/components/homepage/slider/slider.component.html
+++ b/src/app/components/homepage/slider/slider.component.html
@@ -1,3 +1,5 @@
+{{baseUrl}}
+
 <carousel>
   <slide>
     <img src="../../../../assets/images/background.jpg" alt="first slide" style="display: block; width: 100%; height: 500px;">
