--- a/src/app/modules/homepage/components/slider/slider.component.html
+++ b/src/app/modules/homepage/components/slider/slider.component.html
@@ -1,14 +1,5 @@
-{{baseUrl}}
-
 <carousel>
-  <slide>
-    <img src="../../../../assets/images/background.jpg" alt="first slide" style="display: block; width: 100%; height: 500px;">
-  </slide>
-  <slide>
-    <img src="../../../../assets/images/diary.jpg" alt="second slide" style="display: block; width: 100%;height: 500px">
-  </slide>
-  <slide>
-    <img src="../../../../assets/images/diary-slide.jpg" alt="third slide" style="display: block; width: 100%;height: 500px">
+  <slide *ngFor="let image of sliderImages">
+    <img [src]="image.sliderImage" alt="first slide" style="display: block; width: 100%; height: 500px;">
   </slide>
 </carousel>
-<p>slider works!</p>
