--- a/src/app/modules/homepage/components/slider/slider.component.html
+++ b/src/app/modules/homepage/components/slider/slider.component.html
@@ -1,5 +1,11 @@
-<carousel>
-  <slide *ngFor="let image of sliderImages">
-    <img [src]="image.sliderImage" alt="first slide" style="display: block; width: 100%; height: 500px;">
-  </slide>
-</carousel>
+<div class="banner">
+  <div class="banner-slideshow">
+    <div class="bxslider">
+      <carousel class="single-slide">
+        <slide *ngFor="let image of sliderImages">
+          <img [src]="image.sliderImage" alt="first slide" style="display: block; width: 100%; height: 500px;">
+        </slide>
+      </carousel>
+    </div>
+  </div>
+</div>
