--- a/src/app/modules/homepage/components/homepage.component.html
+++ b/src/app/modules/homepage/components/homepage.component.html
@@ -1,5 +1,5 @@
+<div *ngIf="homepageData">
+  <baf-slider [sliderImages]="homepageData.sliderImages"></baf-slider>
+  <baf-featured [homePageFeaturedItems]="homepageData.homePageFeaturedItems"></baf-featured>
+</div>
 
-  <div *ngIf="homepageData">
-    <baf-slider [sliderImages]="homepageData.sliderImages"></baf-slider>
-  </div>
-  <baf-featured></baf-featured>
