--- a/src/app/modules/homepage/components/slider/slider.component.scss
+++ b/src/app/modules/homepage/components/slider/slider.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../../assets/stylesheets/partials/variables";
+@import "src/assets/stylesheets/partials/variables";
 .banner {
   background-color: #f7f7f7;
   position: relative;
