--- a/src/app/modules/homepage/components/featured/featured.component.scss
+++ b/src/app/modules/homepage/components/featured/featured.component.scss
@@ -1,4 +1,16 @@
-@import "../../../../../assets/stylesheets/partials/variables";
+@import "src/assets/stylesheets/partials/variables";
+
+.title-over {
+  display: inline-block;
+  span {
+      background: rgba(255, 255, 255, 0.5);
+      padding: 5px 11px;
+      /*border-radius: 3px;*/
+      color: $black-light;
+      font-size: 14px;
+  }
+}
+
 .home-featured{
   overflow:hidden;
   .container{
