loading box added.

--- a/src/app/modules/homepage/components/homepage.component.html
+++ b/src/app/modules/homepage/components/homepage.component.html
@@ -4,11 +4,11 @@
 </div>
 <!-- Loading box start-->
 <div *ngIf="!homepageData">
-
-  <!--Loading box start-->
+  <!-- slider loading start -->
   <div class="loading-box banner-loading-box"></div>
-  <!--Loading box ends-->
+  <!-- slider loading ends -->
 
+  <!-- featured items loading start -->
   <div class="home-featured">
     <div class="container">
       <p class="black-light mt-20 title-text"><strong>FEATURED</strong></p>
@@ -28,5 +28,6 @@
       <!--Loading box end-->
     </div>
   </div>
+  <!-- featured items loading ends -->
 </div>
 <!-- Loading box ends-->
