--- a/src/app/modules/collections/components/collections/collections.component.html
+++ b/src/app/modules/collections/components/collections/collections.component.html
@@ -1,1 +1,96 @@
-<p>Collection work</p>
+<section class="collections pt-35 pb-45" *ngIf="collectionData">
+  <div class="container">
+    <div class="collaseable-area">
+      <h1 *ngIf="collectionData.HomepageDescription[0].pageTitle"
+        class="uppercase black-light collapsable-header-border-icon font-2em" role="button" aria-expanded="false"
+        aria-controls="collapseExample">
+        {{collectionData.HomepageDescription[0].pageTitle}}
+      </h1>
+    </div>
+
+    <div class="block-element">
+      <span class="overview-expand" (click)="expandCollapseDetail()" *ngIf="!collapsableSection">Overview</span>
+      <span class="overview-collapse " (click)="expandCollapseDetail()" *ngIf="collapsableSection"> <i
+          class="fal fa-angle-left"></i></span>
+    </div>
+
+    <div class="collapsable-section full-width d-flex justify-content-self"
+      [ngClass]="{'full-width': !collapsableSection, 'half-width':collapsableSection}">
+      <div class="overview-cell" *ngIf="collapsableSection">
+        <div class="pb-20" *ngIf="collectionData.HomepageDescription[0].body1" id="collapseExample">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="black-light mb-0 font-1-25em" [innerHtml]="collectionData.HomepageDescription[0].body1"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="grid-cells overflow-h">
+        <!--<div class=" mt-10 ">-->
+
+        <!--collection item start-->
+        <div class="row gutter-30">
+          <div class="single-cell" *ngFor="let collection of collectionData.HomepageCollections">
+            <div class="collection-item d-flex flex-column">
+              <figure class="d-flex justify-content-center align-items-center"
+                [ngStyle]="{'background-image': 'url(' + collection.landscapeImage + ')'}">
+                <a *ngIf="!collection.code" [href]="'collection/'+collection.id"><img
+                    src="assets/images/collection-image-placeholder.png" alt="No Image"></a>
+                <a *ngIf="collection.code" [href]="'collection/'+collection.code"><img
+                    src="assets/images/collection-image-placeholder.png" alt="No Image"></a>
+              </figure>
+              <div class="collection-texture">
+                <a *ngIf="!collection.code" [href]="'collection/'+collection.id"
+                  title="{{collection.name}}">{{collection.name}}</a>
+                <a *ngIf="collection.code" [href]="'collection/'+collection.code"
+                  title="{{collection.name}}">{{collection.name}}</a>
+                <p *ngIf="!collection.code"><a class="gray40" [innerHtml]="collection.description"
+                    [href]="'collection/'+collection.id"></a></p>
+                <p *ngIf="collection.code"><a class="gray40" [innerHtml]="collection.description "
+                    [href]="'collection/'+ collection.code"></a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--collection item end-->
+        <!--</div>-->
+
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+<!-- Loading start -->
+
+<section class="collections pt-35 pb-45" *ngIf="!collectionData">
+  <div class="container">
+    <!--Loading box start-->
+    <div class="loading-box collaseable-area">
+      <h1></h1>
+    </div>
+    <!--Loading box ends-->
+
+    <div class="block-element">
+      <span class="overview-expand">Overview</span>
+    </div>
+
+    <!--lOADING START-->
+    <div class="card-loading-outer loading-box mt-0" style="width:100%; padding-left: 0;">
+      <div class="card-loading" *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10,11]">
+        <div class="card-img" style="height:275px;"></div>
+        <div class="card-title mb-15 mt-15"></div>
+        <div class="card-description"></div>
+        <div class="card-description  w-90"></div>
+        <div class="card-description w-95"></div>
+      </div>
+    </div>
+    <!--lOADING EANDS-->
+  </div>
+</section>
+
+
+<!-- Loading ends -->
