--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -99,7 +99,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarsExample04">
               <ul class="navbar-nav main-navbar navbar-expand-lg">
 
-                      <li class="nav-item"><a class="nav-link" routerLink="collections" href="collections">Collections</a></li>
+                      <li class="nav-item" routerLinkActive="active"><a class="nav-link" routerLink="collections" href="collections">Collections</a></li>
 
 
                       <li class="nav-item"><a class="nav-link" href="stories">Stories</a></li>
