--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -9,8 +9,8 @@
           </ul>
           <ul>
 
-                  <li>
-                      <a href="" class="russian enable"></a>
+                  <li *ngIf="showLangBtn">
+                      <a [routerLink]="" class="russian enable">Russian</a>
                   </li>
 
 
