--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -18,7 +18,7 @@
                       <a href="register">Create account</a>
                   </li>
                   <li class="dropdown loginDropdown">
-                      <a class="dropdown-toggle" href="javascript:;" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      <a class="dropdown-toggle" href="javascript:;" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           <span> Log in</span>
                       </a>
 
@@ -76,7 +76,7 @@
           </a>
           <!--<a class="nav-link open-search-panel show-xs" href="#"><i class="far fa-search"></i></a>-->
           <div class="header-phrases hide-sm">
-              <form class=''>
+              <form>
                   <div class="input-group">
                       <input value="" type="text" class="form-control searchField" placeholder="Enter search term" autocomplete="off" aria-label="Recipient's username" aria-describedby="basic-addon2">
                       <input type="hidden" id="selectedTab" name="st" value="">
