--- a/src/app/modules/stories/components/stories/stories.component.html
+++ b/src/app/modules/stories/components/stories/stories.component.html
@@ -1,1 +1,121 @@
-<p>stories works!</p>
+<section class="collections stories-page pt-35 pb-45" *ngIf="storiesData">
+  <div class="container">
+    <!--***************************** Menu Page ******************************-->
+    <!--************************** Starting here *****************************-->
+    <div class="stories-menu-page">
+      <div class="collaseable-area  mb-30 d-inline-block w-100">
+        <h1 class="uppercase black-light collapsable-header-border-icon font-2em pull-left" role="button"
+          aria-expanded="false" aria-controls="collapseExample">
+          STORIES
+        </h1>
+        <!-- <div class="pagination-view" *ngIf="storiesData.length > 0">
+                      <nav aria-label="Page navigation example" *ngIf="pagination.range().length > 1">
+                          <span class="pages-label">PAGES</span>
+                          <ul class="pagination pagination-sm">
+                              <li class="page-item" ng-class="pagination.prevPageDisabled()">
+                                  <a class="page-link" ng-click="pagination.prevPage()" href="javascript:void(0)" aria-label="Previous">
+                                      <span aria-hidden="true"><i class="fas fa-angle-left"></i></span>
+                                      <span class="sr-only">Previous</span>
+                                  </a>
+                              </li>
+                              <li class="page-item" ng-repeat="n in pagination.range()" ng-class="{active: n == pagination.currentPage}" ng-click="pagination.setPage(n)">
+                                  <a class="page-link pageNumber{{n + 1}}" href="javascript:void(0)">{{n + 1}}</a>
+                              </li>
+                              <li class="page-item" ng-class="pagination.nextPageDisabled()">
+                                  <a class="page-link" href="javascript:void(0)" ng-click="pagination.nextPage()" aria-label="Next">
+                                      <span aria-hidden="true"><i class="fas fa-angle-right"></i></span>
+                                      <span class="sr-only">Next</span>
+                                  </a>
+                              </li>
+                          </ul>
+                      </nav>
+                  </div> -->
+      </div>
+      <div class="collapsable-section stories-section full-width d-flex justify-content-self">
+        <div class="grid-cells" *ngIf="storiesData.length > 0">
+          <!--collection item start-->
+          <div class="row">
+            <div class="single-cell" *ngFor="let story of storiesData">
+              <div class="collection-item">
+                <figure class="d-flex justify-content-center align-items-center"
+                  [ngStyle]="{'background-image': 'url(' + story.thumbnail + ')'}">
+
+                  <a *ngIf="!story.code" [routerLink]="'story'+ story.id"><img
+                      src="assets/images/collection-image-placeholder.png" alt="No Image"></a>
+                  <a *ngIf="story.code" [routerLink]="'story'+ story.code"><img
+                      src="assets/images/collection-image-placeholder.png" alt="No Image"></a>
+                </figure>
+                <div class="collection-texture">
+                  <a *ngIf="!story.code" title="{{story.title}}" href="'story'+ story.id" [innerHTML]="story.title"></a>
+                  <a *ngIf="story.code" title="{{story.title}}" href="'story'+ story.code"
+                    [innerHTML]="story.title"></a>
+                  <p>
+                    <a *ngIf="!story.code" class="gray40" href="'story' + story.id" [innerHTML]="story.narrative"></a>
+                    <a *ngIf="story.code" class="gray40" href="'story' + story.code" [innerHTML]="story.narrative"></a>
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--collection item end-->
+        </div>
+
+      </div>
+
+      <!-- <div class="collaseable-area  mb-30" *ngIf="storiesData.length > 0">
+        <div class="pagination-view">
+          <nav aria-label="Page navigation example" *ngIf="pagination.range().length > 1">
+            <span class="pages-label">PAGES</span>
+            <ul class="pagination pagination-sm">
+              <li class="page-item" ng-class="pagination.prevPageDisabled()">
+                <a class="page-link" ng-click="pagination.prevPage()" href="javascript:void(0)" aria-label="Previous">
+                  <span aria-hidden="true"><i class="fas fa-angle-left"></i></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              <li class="page-item" ng-repeat="n in pagination.range()" ng-class="{active: n == pagination.currentPage}"
+                ng-click="pagination.setPage(n)">
+                <a class="page-link pageNumber{{n + 1}}" href="javascript:void(0)">{{n + 1}}</a>
+              </li>
+              <li class="page-item" ng-class="pagination.nextPageDisabled()">
+                <a class="page-link" href="javascript:void(0)" ng-click="pagination.nextPage()" aria-label="Next">
+                  <span aria-hidden="true"><i class="fas fa-angle-right"></i></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div> -->
+      <p *ngIf="storiesData.length == 0">No story found!</p>
+    </div>
+    <!--**************************** Menu page ****************************** -->
+    <!--*************************** Ending here ******************************-->
+  </div>
+</section>
+
+
+
+<section class="collections stories-page pt-35 pb-45" *ngIf="!storiesData">
+  <div class="container">
+    <div class="stories-menu-page">
+      <div class="collaseable-area  mb-30 d-inline-block w-100">
+        <h1 class="uppercase black-light collapsable-header-border-icon font-2em pull-left" role="button"
+          aria-expanded="false" aria-controls="collapseExample">
+          STORIES
+        </h1>
+      </div>
+      <!--lOADING START-->
+      <div class="card-loading-outer loading-box mt-0" ng-show="loading" style="width:100%; padding-left: 0;">
+        <div class="card-loading" *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10,11]">
+          <div class="card-img" style="height:275px;"></div>
+          <div class="card-title mb-15 mt-15"></div>
+          <div class="card-description"></div>
+          <div class="card-description  w-90"></div>
+          <div class="card-description w-95"></div>
+        </div>
+      </div>
+      <!--lOADING EANDS-->
+    </div>
+  </div>
+</section>
