--- a/src/app/modules/about/components/about/about.component.html
+++ b/src/app/modules/about/components/about/about.component.html
@@ -1,62 +1,29 @@
-<section class="about-page" [hidden]="!aboutData">
+<section class="about-page" *ngIf="aboutData">
     <div class="container pt-45">
         <div class="title-name-code d-block pb-20 mb-20">
-            <h6 class="pull-left font-2-5em ng-binding">ABOUT</h6>
+            <h6 class="pull-left font-2-5em">ABOUT</h6>
             <div class="clearfix"></div>
         </div>
         <div class="featuredItem">
-            <!--first item-->
-
-
-            <!-- <div class="featuredStory mb-50" *ngFor="let about of aboutData">
+            <!--itemw list-->
+            <div class="featuredStory mb-50" *ngFor="let about of aboutData">
                 <div class="split-100 d-flex">
                     <div class="width-40">
                         <div class="stroyDescription pr-40">
-                           
+
                             <div [innerHTML]="about.narrative" class="black-light font-1-25em"></div>
                         </div>
                     </div>
                     <div class="width-60 make-50">
                         <div class="stroyMedia mt-5">
-                            <figure class="mb-10" style="background-image: url('{{about.landscapeImage}}')">
-                                <img [src]="about.landscapeImage" alt="No Image">   
-                            </figure> 
+                            <figure class="mb-10" [ngStyle]="{'background-image': 'url(' + about.landscapeImage + ')'}">
+                                <img [src]="about.landscapeImage" alt="No Image">
+                            </figure>
                             <p class="b3">{{about.itemTitle}}</p>
                         </div>
                     </div>
                 </div>
-            </div> -->
-
-
-
-
-
-
-
-            <div class="featuredStory mb-50">
-                <div class="split-100 d-flex">
-                    <div class="width-40">
-                        <div class="stroyDescription pr-40">
-                           
-                            <div [innerHTML]="aboutData[0].narrative" class="black-light font-1-25em"></div>
-                        </div>
-                    </div>
-                    <div class="width-60 make-50">
-                        <div class="stroyMedia mt-5">
-                            <figure class="mb-10" style="background-image: url('{{aboutData[0].landscapeImage}}')">
-                                <img [src]="aboutData[0].landscapeImage" alt="No Image">   
-                            </figure> 
-                            <p class="b3">{{aboutData[0].itemTitle}}</p>
-                        </div>
-                    </div>
-                </div>
             </div>
-
-
-
-
-
-
         </div>
-    </div> 
+    </div>
 </section>
