--- a/src/app/modules/stories/components/stories/stories.component.html
+++ b/src/app/modules/stories/components/stories/stories.component.html
@@ -1,4 +1,4 @@
-<section class="collections stories-page pt-35 pb-45" *ngIf="storiesData">
+<section class="collections stories-page pt-35 pb-45" *ngIf="filteredStoriesData">
   <div class="container">
     <!--***************************** Menu Page ******************************-->
     <!--************************** Starting here *****************************-->
@@ -8,34 +8,13 @@
           aria-expanded="false" aria-controls="collapseExample">
           STORIES
         </h1>
-        <!-- <div class="pagination-view" *ngIf="storiesData.length > 0">
-                      <nav aria-label="Page navigation example" *ngIf="pagination.range().length > 1">
-                          <span class="pages-label">PAGES</span>
-                          <ul class="pagination pagination-sm">
-                              <li class="page-item" ng-class="pagination.prevPageDisabled()">
-                                  <a class="page-link" ng-click="pagination.prevPage()" href="javascript:void(0)" aria-label="Previous">
-                                      <span aria-hidden="true"><i class="fas fa-angle-left"></i></span>
-                                      <span class="sr-only">Previous</span>
-                                  </a>
-                              </li>
-                              <li class="page-item" ng-repeat="n in pagination.range()" ng-class="{active: n == pagination.currentPage}" ng-click="pagination.setPage(n)">
-                                  <a class="page-link pageNumber{{n + 1}}" href="javascript:void(0)">{{n + 1}}</a>
-                              </li>
-                              <li class="page-item" ng-class="pagination.nextPageDisabled()">
-                                  <a class="page-link" href="javascript:void(0)" ng-click="pagination.nextPage()" aria-label="Next">
-                                      <span aria-hidden="true"><i class="fas fa-angle-right"></i></span>
-                                      <span class="sr-only">Next</span>
-                                  </a>
-                              </li>
-                          </ul>
-                      </nav>
-                  </div> -->
+        <pagination [totalItems]="storiesData.length" (pageChanged)="pageChanged($event)"></pagination>
       </div>
       <div class="collapsable-section stories-section full-width d-flex justify-content-self">
-        <div class="grid-cells" *ngIf="storiesData.length > 0">
+        <div class="grid-cells" *ngIf="filteredStoriesData.length > 0">
           <!--collection item start-->
           <div class="row">
-            <div class="single-cell" *ngFor="let story of storiesData">
+            <div class="single-cell" *ngFor="let story of filteredStoriesData">
               <div class="collection-item">
                 <figure class="d-flex justify-content-center align-items-center"
                   [ngStyle]="{'background-image': 'url(' + story.thumbnail + ')'}">
@@ -59,35 +38,9 @@
           </div>
           <!--collection item end-->
         </div>
-
       </div>
-
-      <!-- <div class="collaseable-area  mb-30" *ngIf="storiesData.length > 0">
-        <div class="pagination-view">
-          <nav aria-label="Page navigation example" *ngIf="pagination.range().length > 1">
-            <span class="pages-label">PAGES</span>
-            <ul class="pagination pagination-sm">
-              <li class="page-item" ng-class="pagination.prevPageDisabled()">
-                <a class="page-link" ng-click="pagination.prevPage()" href="javascript:void(0)" aria-label="Previous">
-                  <span aria-hidden="true"><i class="fas fa-angle-left"></i></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-              </li>
-              <li class="page-item" ng-repeat="n in pagination.range()" ng-class="{active: n == pagination.currentPage}"
-                ng-click="pagination.setPage(n)">
-                <a class="page-link pageNumber{{n + 1}}" href="javascript:void(0)">{{n + 1}}</a>
-              </li>
-              <li class="page-item" ng-class="pagination.nextPageDisabled()">
-                <a class="page-link" href="javascript:void(0)" ng-click="pagination.nextPage()" aria-label="Next">
-                  <span aria-hidden="true"><i class="fas fa-angle-right"></i></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div> -->
-      <p *ngIf="storiesData.length == 0">No story found!</p>
+      <pagination [totalItems]="storiesData.length" (pageChanged)="pageChanged($event)"></pagination>
+      <p *ngIf="filteredStoriesData.length == 0">No story found!</p>
     </div>
     <!--**************************** Menu page ****************************** -->
     <!--*************************** Ending here ******************************-->
@@ -96,7 +49,7 @@
 
 
 
-<section class="collections stories-page pt-35 pb-45" *ngIf="!storiesData">
+<section class="collections stories-page pt-35 pb-45" *ngIf="!filteredStoriesData">
   <div class="container">
     <div class="stories-menu-page">
       <div class="collaseable-area  mb-30 d-inline-block w-100">
