--- a/src/assets/stylesheets/styles.scss
+++ b/src/assets/stylesheets/styles.scss
@@ -14,7 +14,7 @@
 
 @import "partials/typography";
 @import "partials/buttons";
-@import "partials/grid";
+// @import "partials/grid";
 @import "modules/search";
 @import "modules/stories";
 @import "partials/loading-box";
