--- a/src/app/modules/collections/components/collections/collections.component.html
+++ b/src/app/modules/collections/components/collections/collections.component.html
@@ -20,7 +20,8 @@
         <div class="pb-20" *ngIf="collectionsData.HomepageDescription[0].body1" id="collapseExample">
           <div class="row">
             <div class="col-sm-12">
-              <div class="black-light mb-0 font-1-25em" [innerHtml]="collectionsData.HomepageDescription[0].body1"></div>
+              <div class="black-light mb-0 font-1-25em" [innerHtml]="collectionsData.HomepageDescription[0].body1">
+              </div>
             </div>
           </div>
         </div>
