--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -19,7 +19,7 @@
           <a [routerLink]="'register'">Create account</a>
         </li>
         <li class="dropdown loginDropdown">
-          <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+          <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <span> Log in</span>
           </a>
