--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -18,13 +18,21 @@
         <li>
           <a [routerLink]="'register'">Create account</a>
         </li>
+
+
         <li class="dropdown loginDropdown">
+
           <a class="dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             <span> Log in</span>
           </a>
 
           <div class="dropdown-menu login-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
+
+            <baf-login-form></baf-login-form>
+          </div>
+
+          <!-- <div class="dropdown-menu login-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
             <form class="login-form">
               <div class="login-box">
 
@@ -56,7 +64,10 @@
                 <a class="pull-right" [routerLink]="'register'">Create account</a>
               </div>
             </form>
-          </div>
+          </div> -->
+
+
+
         </li>
 
         <li class="dropdown accountDropdown">
