--- a/src/app/modules/contact/components/contact/contact.component.html
+++ b/src/app/modules/contact/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section class="about-page">
+<section class="about-page" *ngIf="contactPageData">
   <div class="container pt-45">
     <div class="title-name-code d-block pb-20 mb-20">
       <h6 class="pull-left font-2-5em">CONTACT</h6>
@@ -19,6 +19,52 @@
                 <img [src]="contact.landscapeImage" alt="No Image">
               </figure>
               <p class="b3">{{contact.itemTitle}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+<section class="about-page" *ngIf="!contactPageData">
+  <div class="container pt-45">
+    <!--Loading box start-->
+    <div class="loading-box loading-title title-name-code d-block pb-20 mb-20">
+      <h6></h6>
+    </div>
+    <!--Loading box end-->
+    <div class="featuredItem loading-box featuredItem-loading">
+      <!--first item-->
+      <div class="featuredStory mb-50">
+        <div class="split-100 d-flex">
+          <div class="width-40">
+            <!--Loading box start-->
+            <div class="stroyDescription pr-40">
+              <p></p>
+              <p class="w-20"></p>
+              <p class="w-25"></p>
+              <br>
+              <p class="w-70"></p>
+              <br>
+              <h5 class="w-30"></h5>
+              <p class="w-50"></p>
+              <p class="w-46"></p>
+              <p class="w-35"></p>
+              <br>
+              <h5 class="w-50"></h5>
+              <p class="w-46"></p>
+              <p class="w-46"></p>
+              <p class="w-42"></p>
+            </div>
+            <!--Loading box end-->
+          </div>
+          <div class="width-60 make-50">
+            <div class="stroyMedia mt-5">
+              <figure class="mb-10"></figure>
+              <p></p>
             </div>
           </div>
         </div>
