--- a/src/app/modules/shared/components/login/login-form.component.html
+++ b/src/app/modules/shared/components/login/login-form.component.html
@@ -1,37 +1,34 @@
-<div class="">
-  <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <div class="login-box">
+<!-- <div class="dropdown-menu login-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink"> -->
 
-      <div class="form-group">
-        <input formControlName="email" autocomplete="off" maxlength="100" class="form-control" type="text"
-          placeholder="Username/Email" />
-      </div>
+<form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <div class="login-box">
 
-      
-
-
-      <div class="form-group">
-        <input formControlName="pass" autocomplete="off" maxlength="128" required class="form-control" type="password"
-          placeholder="Password" />
-      </div>
-      <div class="remember-me">
-        <div class="form-check pull-left">
-          <input formControlName="isRemember" type="checkbox" class="form-check-input" id="chk-remeber-me">
-          <label class="form-check-label" for="chk-remeber-me"></label>
-          <label class="form-check-label" for="chk-remeber-me">Remember me</label>
-        </div>
-        <p class="message pull-right"><a [routerLink]="'forgotpassword'">Forgot Password?</a></p>
-      </div>
+    <div class="form-group">
+      <input formControlName="email" autocomplete="off" maxlength="100" class="form-control" type="text"
+        placeholder="Username/Email" />
     </div>
-    <div class="login-bar">
-      <button type="submit" class="btn btn-default">
-        <!-- <span>Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span> -->
-        <span>Login</span>
-      </button>
+
+    <div class="form-group">
+      <input formControlName="pass" autocomplete="off" maxlength="128" required class="form-control" type="password"
+        placeholder="Password" />
     </div>
-    <div class="login-create">
-      <p class="message pull-left"><a style="cursor: default;" class="bf">Don’t have an account?</a></p>
-      <a class="pull-right" [routerLink]="'register'">Create account</a>
+    <div class="remember-me">
+      <div class="form-check pull-left">
+        <input formControlName="isRemember" type="checkbox" class="form-check-input" id="chk-remeber-me">
+        <label class="form-check-label" for="chk-remeber-me"></label>
+        <label class="form-check-label" for="chk-remeber-me">Remember me</label>
+      </div>
+      <p class="message pull-right"><a [routerLink]="'forgotpassword'">Forgot Password?</a></p>
     </div>
-  </form>
-</div>
+  </div>
+  <div class="login-bar">
+    <button type="submit" class="btn btn-default">
+      <span>Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
+      <span>Login</span>
+    </button>
+  </div>
+  <div class="login-create">
+    <p class="message pull-left"><a style="cursor: default;" class="bf">Don’t have an account?</a></p>
+    <a class="pull-right" [routerLink]="'register'">Create account</a>
+  </div>
+</form>
