--- a/src/app/modules/shared/components/login/login-form.component.html
+++ b/src/app/modules/shared/components/login/login-form.component.html
@@ -1,16 +1,13 @@
-<!-- <div class="dropdown-menu login-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink"> -->
-
-<form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form class="login-form" [formGroup]="loginForm" (ngSubmit)="authUserLogin()">
   <div class="login-box">
-
     <div class="form-group">
       <input formControlName="email" autocomplete="off" maxlength="100" class="form-control" type="text"
         placeholder="Username/Email" />
     </div>
+    <!-- <p class="small text-danger" *ngIf="!loginForm.get('email').valid">Email</p> -->
 
     <div class="form-group">
-      <input formControlName="pass" autocomplete="off" maxlength="128" required class="form-control" type="password"
-        placeholder="Password" />
+      <input formControlName="password" autocomplete="off" maxlength="128" required class="form-control" type="password" placeholder="Password" />
     </div>
     <div class="remember-me">
       <div class="form-check pull-left">
@@ -22,9 +19,9 @@
     </div>
   </div>
   <div class="login-bar">
-    <button type="submit" class="btn btn-default">
-      <span>Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
-      <span>Login</span>
+    <button type="submit" class="btn btn-default" [disabled]="!loginForm.valid">
+      <span *ngIf="showLoading">Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
+      <span *ngIf="!showLoading">Login</span>
     </button>
   </div>
   <div class="login-create">
