--- a/src/app/modules/shared/components/login/login-form.component.html
+++ b/src/app/modules/shared/components/login/login-form.component.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <div class="login-bar">
-    <button type="button" class="btn btn-default" [disabled]="!loginForm.valid">
+    <button type="submit" class="btn btn-default" [disabled]="!loginForm.valid">
       <span *ngIf="showLoading">Login&nbsp;<i class="fa fa-spinner fa-spin"></i></span>
       <span *ngIf="!showLoading">Login</span>
     </button>
